<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBody"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/marginBody"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:src="@drawable/ic_baseline_account_circle_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout style="@style/cardTitle">

            <TextView
                style="@style/cardTextTitle"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout style="@style/cardBody">

            <TextView
                style="@style/cardTextBody"
                android:text="@string/user" />

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/cardTextBody"
                android:text="@string/password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/accept" />

            <TextView
                style="@style/cardTextLink"
                android:text="@string/forgotPassword" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>